chore: change the class name of the parent border container to include the name of the border

--- a/src/components/thinborder/ThinBorder.css
+++ b/src/components/thinborder/ThinBorder.css
@@ -1,9 +1,4 @@
-body {
-  background-color: black;
-}
-.parent-position {
-  color: white;
-  background-color: black;
+.thin-border-parent-position {
   position: relative;
 }
 
